[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cadive-guard"
version = "1.3.0"
description = "Source-available client SDK for CADIVE — guards AI agent actions before they execute"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Cadive" }]
dependencies = []  # standard library only
keywords = ["ai-agents", "security", "claude-code", "guardrails", "agent-safety"]
urls = { Homepage = "https://cadive.net", Repository = "https://github.com/Leo-Falcon/cadive-guard" }

[project.scripts]
cadive-hook = "cadive_guard.hook:main"  # Claude Code PreToolUse hook

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["cadive_guard"]

[tool.pytest.ini_options]
pythonpath = ["."]   # make `import cadive_guard` work without an install
testpaths = ["tests"]
addopts = "-q"
